--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,6 +24,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.8.2",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "prettier": "^3.3.3"
     }
 }
