--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,6 +25,7 @@
         "mongoose": "^8.8.2",
         "multer": "^1.4.5-lts.1",
         "multer-storage-cloudinary": "^4.0.0",
-        "prettier": "^3.3.3"
+        "prettier": "^3.3.3",
+        "react-router-dom": "^7.1.1"
     }
 }
